Thu Nov 16 20:29:17 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* srv_rcache.c (krb5_get_server_rcache): Use krb5_rc_default_type
		instead of assuming default rcache type is "dfl".

Mon Nov 13 14:40:05 1995    <tytso@rsts-11.mit.edu>

	* walk_rtree.c (krb5_walk_realm_tree): Added ANL changes to
		support configuration authentication paths.

Mon Nov 13 12:57:12 1995  Theodore Y. Ts'o  <tytso@dcl>

	* preauth.c (krb5_process_padata): Added generalized processing
		for preauth information which is returned by the KDC.
		This should be general enough to support the AFS3_SALT
		preauth type, the SNK4 preauth type, and the public-key
		mods to Kerberos.
	(process_pw_salt): New function for processing the KRB5_PW_SALT
		preauthentication type.

	* get_in_tkt.c (decrypt_as_reply): Removed temporary kludge for
		processing the PW_SALT preauth type; that's now done in
		preauth.c
	(krb5_get_in_tkt): Call krb5_process_padata with new arguments so
		that the preauth code can set the decryption_key if
		necessary. 
		
Thu Nov 09 17:05:57 1995  Chris Provenzano (proven@mit.edu)

        * in_tkt_pwd.c : Remove krb5_enctype from krb5_string_to_key() args.

Thu Nov  9 00:02:43 1995  Theodore Y. Ts'o  <tytso@dcl>

	* get_in_tkt.c (krb5_get_in_tkt): Remove the etype_info argument
		from the call to krb5_obtain_padata.

	* preauth.c (krb5_obtain_padata): Use the PADATA_ETYPE_INFO
		preauth, if it exists, to determine which salt type to use
		when encrypting the preauthentication data.  Remove the
		etype_info argument.

Wed Nov  8 02:50:59 1995  Theodore Y. Ts'o  <tytso@dcl>

	* krbconfig.c: Removed the krb5_clockskew variable.

	* srv_rcache.c (krb5_get_server_rcache): 
	* rd_safe.c (krb5_rd_safe): 
	* rd_req_dec.c (krb5_rd_req_decoded): 
	* rd_priv.c (krb5_rd_priv): 
	* rd_cred.c (krb5_rd_cred): 
	* gc_via_tkt.c (krb5_get_cred_via_tkt): 
	* get_in_tkt.c (verify_as_reply): Replace use of krb5_clockskew
		with context->clockskew.
